# WEB_CONTRACTOR

./: .env.example  .gitignore  .pids  .uncommentrc.toml  404.html  AGENTS.md  API_DOCUMENTATION.md  ARCHITECTURE_COMPARISON.md  ENHANCED_SCRAPING_GUIDE.md  MIGRATION_GUIDE.md  Makefile  QUICKSTART.md  README.md  README_TUI.md  REFACTOR_SUMMARY.md  auditor.py  cli.py  db.py  discovery.py  email_generator.py  email_sender.py  lead_repository.py  leads.db  leads.db-shm  leads.db-wal  main.py  main_tui.py  mkdocs.yml  mypy.ini  objects.inv  outreach.py  pyproject.toml  scraper.py  simple_test.py  streamlit_app.py  test_enhanced_scraping.py  verify_refactor.py
.mimocode/plans/: 1782217969537-calm-river.md
Cli-Tools/: automator.py
agent_contexts/: agents_pep-0008.md
agents/: email_sender.py  hitl_sender.py  quality_control_agent.py  stage_b_auditor.py  stage_c_messaging.py
atlas-charts-setup/: index.html
conductor/: plan.md
config/: app_config.json  app_settings.json  audit_settings.json  buckets.json  default.yaml  email_prompts.json  email_templates.json  scraping_config.json
core/: __init__.py  agents.py  api_utils.py  app_core.py  audit.py  contact_finder.py  db.py  db_models.py  db_peewee.py  db_repository.py  discovery.py  email.py  email_utils.py  lead_buckets.py  llm.py  local_models.py  mode_config.py  mode_manager.py  orchestrator.py  outreach.py  pipeline_orchestrator.py  rate_limiter.py  repository.py  scraping_config_manager.py  selenium_utils.py  settings.py  stage0_orchestrator.py  streamlit_utils.py  telegram.py  telegram_bot.py  utils.py  visualizations.py
core/sources/: __init__.py  allindiasearch.py  base.py  google_maps.py  google_search.py  indiabizclub.py  justdial.py  sulekha.py  website_filter_scraper.py  yellowpages.py
docs/: atlas-charts-setup.md
pages/: 0_Pipeline.py  1_Discovery.py  2_Audit.py  3_Email.py  4_Database.py  5_Performance.py
reference/src/: index.html
reference/src/app/: index.html
reference/src/audit/: index.html
scrapers/: base_scraper.py  bbb_scraper.py  facebook_business_scraper.py  facebook_scraper.py  google_maps_scraper.py  industry_directory_scraper.py  linkedin_company_scraper.py  linkedin_scraper.py  stage_a_scraper.py  yellow_pages_scraper.py  yelp_scraper.py
scripts/: diagnostic.py  manage_buckets.py  setup.py  setup.sh  start_telegram.sh  stop.sh  verify.sh
search/: search_index.json
src/: __init__.py  app.py  cli.py  gui.py  main.py  streamlit_app.py
src/audit/: __init__.py  adk_agents.py  adk_callbacks.py  adk_pipeline.py  orchestrator.py  pipeline.py  tools.py
src/config/: app_config.json
src/core/: agents.py  audit.py  db.py  email.py  llm.py  settings.py  telegram.py
src/database/: __init__.py  _helpers.py  bucket_repo.py  connection.py  email_repo.py  lead_repo.py  query_perf_repo.py  repository.py  schemas.py
src/discovery/: __init__.py  engine.py
src/infra/: __init__.py  adk_adapter.py  adk_tools.py  config_defaults.py  config_schema.py  db_health.py  http.py  llm.py  llm_models.py  logging.py  rate_limit.py  settings.py  vllm_adk_model.py  vllm_engine.py  vllm_server.py
src/models/: schemas.py
src/outreach/: __init__.py  discovery.py  generator.py  prompts.py  sender.py  tools.py
src/pages/: 0_Pipeline.py  1_Discovery.py  2_Audit.py  3_Email.py  4_Analytics.py  5_Performance.py  6_Campaigns.py
src/services/: __init__.py  bucket_service.py  email_service.py  pipeline_service.py  stats_service.py
src/streamlit_app/: Home.py  state.py
src/ui/: __init__.py  dark_theme.py  task_runner.py  utils.py  visualizations.py
templates/: index.html
ui/: __init__.py  app.py  components.py  controllers.py  dashboard.py
ui/screens/: __init__.py  base.py  database.py  logs.py  market.py  review.py
website-template/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
(+96 files in other folders)
