[project]
name = "web-contractor"
version = "1"
description = "Lead generation and outreach automation "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "playwright>=1.40.0",
    "python-dotenv>=1.2.1",
    "beautifulsoup4>=4.12.0",
    "pymongo>=4.6.0",
    "email-validator>=2.3.0",
    "email-scraper>=0.6",
    "mailscout>=0.1.1",
    "streamlit>=1.35.0",
    # "mkdocs>=1.6.1",
    # "mkdocstrings[python]>=1.0.3",
    # "mkdocs-material>=9.7.5",
    # "mkdocs-api-autonav>=0.4.0",
    "google-adk[extensions]>=2.0.0",
    "gpustat>=1.1.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
web-contractor = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["*.py", "src/**/*.py", "scripts/*.py"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "types-requests>=2.32.4.20260107",
    "types-beautifulsoup4>=4.12.0.20250516",
    "hatchling>=1.0.0",
    "ty>=0.0.29",
    "pandas-stubs>=3.0.0.260204; python_version>='3.11'",
]

[tool.ty.environment]
root = ["./src"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"src/__init__.py" = ["E402", "F401"]
"main.py" = ["E402"]
"src/streamlit_app/Home.py" = ["E402"]
"src/streamlit_app/pages/*.py" = ["E402"]
